# mpi-sda-swissgrid-predictor

./: .env.example  .gitignore  Dockerfile  README.md  app.py  baseDockerfile  dev-requirements.txt  docker-run.sh  enviroment.yml  pyproject.toml
.github/workflows/: docker-auto-build.yml
docs/examples/: test_local_prediction_request.py  test_ping_request.py  test_prediction_request.py  upload_images_to_kp.py
lib/: local_predict_endpoint.py  predict_endpoint.py  setup.py  utils.py
lib/sdk/: file_repository.py  kernel_plackster_gateway.py  models.py  utils.py
model_files/: Unified_Beznau_model.keras
models_docker/: Dockerfile
models_docker/model_files/: Unified_model.keras
